# market-predictor

./: .gitignore  PROCESS.md  README.md  main.py  pyproject.toml
data/processed/: btcusd_clean_daily.csv  btcusd_features.csv  btcusd_features_daily.csv  btcusd_final_dataset.csv  btcusd_final_dataset_daily.csv
src/: data_loader.py  future_generator.py  model.py  preprocessing.py  price_model_xgb.py
